# ShelfDetection

src/: apc_object.cpp  apc_object.hpp  apc_shelf.cpp  apc_shelf.hpp  main.cpp  package.xml  sensing_common.h  shelf.yaml  utilities.cpp
